# cosmic-calenderdot

./: Cargo.toml  README.md  justfile
i18n/en/: cosmic_app_template.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs  calendar.rs  config.rs  main.rs
