[package]
name = "cosmic-calenderdot"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A comic-style calendar applet for the COSMIC desktop"
repository = ""

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
dirs = "6"
i18n-embed-fl = "0.10"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
rust-embed = "8.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.0", features = ["full"] }
notify = { version = "8", features = ["macos_fsevent"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.i18n-embed]
version = "0.16"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = [
    "applet",
    "applet-token",
    "dbus-config",
    "multi-window",
    "tokio",
    "wayland",
    "winit",
]
